Fix some overflow elements

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
     color: #f3f3f3;
     min-width: 100vw;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 main,
@@ -30,11 +31,13 @@ main button {
 }
 
 main {
+    position: relative;
+    min-height: 100vh;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 2rem;
+    /* justify-content: center; */
 
     /* font-size: 1.5em; */
     font-size: 1.85em;
@@ -66,7 +69,8 @@ main button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 6rem;
+    text-align: center;
+    margin-top: 10rem;
 }
 
 .container img {
@@ -98,12 +102,12 @@ main button:hover {
 
 
     max-width: 100rem;
+    padding-bottom:  6rem;
 }
 
 .facts p {
     padding-left: 6rem;
     padding-right: 6rem;
-    padding-bottom: 0.5rem;
     margin-top: 1rem;
 }
 
@@ -111,8 +115,11 @@ footer {
     position: absolute;
     bottom: 0;
 
-    padding: 1.8rem;
+    padding: 0.8rem;
+    margin: 0.8rem;
 
+    height: 6rem;
+    width: 100%;
     text-align: center;
 }
 
@@ -144,7 +151,7 @@ footer a:hover {
     }
 
     .container {
-        margin-top: 4rem;
+        margin-top: 2.5rem;
     }
 
     .container img {
